# jrag-engine

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  ProjectPresets.json  README.md
dev_env/: DevEnvPresets.json  Dockerfile  launch.sh  settings.json
example/: CMakeLists.txt  main.cpp
example/assets/: bindings.cfg
example/states/: root.cpp  root.hpp
example/states/game/: game.cpp  game.hpp
example/states/game/pause/: pause.cpp  pause.hpp
example/states/intro/: intro.cpp  intro.hpp
example/states/main_menu/: main_menu.cpp  main_menu.hpp
scripts/: build.sh  clean.sh  rebuild.sh  run.sh
src/: CMakeLists.txt
src/app_state/: CMakeLists.txt  base_state.cpp  command.cpp  graphics_tooling.cpp  logic_tooling.cpp  state_manager.cpp
src/app_state/include/public/app_state/: base_state.hpp  command.hpp  state.hpp  state_manager.hpp
src/asset/: CMakeLists.txt  manager.cpp  sprite_sheet.cpp
src/asset/include/public/asset/: manager.hpp  sprite_sheet.hpp
src/collision/: CMakeLists.txt  collider.cpp  map.cpp
src/collision/include/public/collision/: collider.hpp  map.hpp
src/engine/: CMakeLists.txt  engine.cpp
src/engine/include/public/engine/: engine.hpp
src/input/: CMakeLists.txt  dispatcher.cpp  keyboard.cpp  loader.cpp  mouse.cpp  mouse_wheel.cpp  parser.cpp  parser.hpp  print.cpp  variant.cpp
src/input/include/public/input/: bind_types.hpp  commands.hpp  dispatcher.hpp  keyboard.hpp  loader.hpp  mouse.hpp  mouse_wheel.hpp  print.hpp  types.hpp  variant.hpp
src/math/: CMakeLists.txt
src/math/include/public/math/: rect.hpp  vector2.hpp
src/paths/: CMakeLists.txt  paths.cpp
src/paths/include/public/path/: paths.hpp
src/util/: CMakeLists.txt
src/util/include/public/util/: util.hpp
